--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "selenium-webdriver": "^4.0.0-alpha.4"
   },
   "devDependencies": {
+    "eslint": "^6.0.1",
     "prettier": "^1.18.2"
   }
 }
