--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format": "eslint . && npx prettier --write *.js"
   },
   "dependencies": {
+    "chromedriver": "^80.0.0",
     "dotenv": "^8.2.0",
     "faker": "^4.1.0",
     "request": "^2.88.0",
